[project]
name = "raggae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "filetype>=1.2.0",
    "htmltabletomd>=1.0.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.7",
    "langchain-chroma==0.1.4",
    "langchain-community>=0.3.7",
    "langchain-openai>=0.2.14",
    "loguru>=0.7.3",
    "numpy==1.26",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pydantic==2.9.2",
    "pydotenv>=0.0.7",
    "redis>=5.2.1",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "unstructured[pdf]>=0.16.11",
]
